--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\Ayush Sinha\Desktop\web development\HTML - Personal Site\HPEZ0613-modified.png" alt="My picture" /></td>
+      <td><img src="HPEZ0613-modified.png" alt="My picture" /></td>
       <td>
         <h1>Ayush</h1>
         <p><em>Student at <strong><a href="https://www.acharya.ac.in/"> Acharya Institute of Technology</a></strong></em></p>
